--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
+<!DOCTYPE html>
 <html>
-<body>
-<p>Hello there</p>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
+<body>
+<p>Maria Jantz</p>
+<ul>
+
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="about.html">About Me</a>
+        </li>
+        <li>
+            <a href="research.html">Research</a>
+        </li>
+        <li>
+            <a href="publications.html">Publications</a>
+        </li>
+
+</ul>
 
 </body>
 </html>
