--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 <ul>
 
         <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="about.html">About Me</a>
-        </li>
-        <li>
-            <a href="research.html">Research</a>
+            <a href="index.html">Background</a>
         </li>
         <li>
             <a href="publications.html">Publications</a>
         </li>
-
+        <li>
+            <a href="links.html">Curriculum Vitae</a>
+        </li>
+        <li>
+            <a href="contact.html">Contact</a>
+        </li>
 </ul>
 
 </body>
