check active tab

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <body>
 <p>Maria Jantz</p>
 <ul>
-
-        <li>
+        <li id="active-tab">
             <a href="index.html">Background</a>
         </li>
         <li>
