basic site layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Maria Jantz: About</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
+              <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Yatra+One">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
 <body>
-<p>Maria Jantz</p>
+<h1>Maria Jantz</h1>
 <ul>
         <li id="active-tab">
             <a href="index.html">Background</a>
@@ -20,6 +27,14 @@
             <a href="contact.html">Contact</a>
         </li>
 </ul>
+<div id="main">
+<h2>Education</h2>
+<p>I am currently getting a PhD at the University of Pittsburgh...</p>
+<p>Prior to joining this lab, I worked as a Research Technician at Northwestern University with Professors Lee Miller and Matthew Tresch...</p>
+<p>I graduated from Goshen College Summa Cum Laude in 2015 with a major in Physics and minors in Mathematics, Informatics, and Visual Art.</p>
 
+<h2>Research Interests</h2>
+<p>float a photo over here</p>
+</div>
 </body>
 </html>
