--- a/links.html
+++ b/links.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Maria Jantz: Links</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Yatra+One">
     </head>
 
 <body>
-<p>Temp page</p>
+    <h1>Maria Jantz</h1>
+    <ul>
+        <li>
+            <a href="index.html">Background</a>
+        </li>
+        <li>
+            <a href="publications.html">Publications</a>
+        </li>
+        <li id="active-tab">
+            <a href="links.html">Curriculum Vitae</a>
+        </li>
+        <li>
+            <a href="contact.html">Contact</a>
+        </li>
+</ul>
 </body>
