--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
         <title>Maria Jantz: Contact</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Yatra+One">
+              href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
+              <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Yatra+One">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
 <body>
@@ -23,6 +27,12 @@
             <a href="contact.html">Contact</a>
         </li>
 </ul>
-
-<p>Email, RNEL location, RNEL website, scholar page</p>
+<div id="main">
+    <h2>Where to find me</h2>
+    <p><b>Email: </b>mariajantz@pitt.edu</p>
+    <p><b>Office Location: </b>Keystone Building, 3520 Fifth Ave, Rm 320 (currently working remotely)</p>
+    <p><b>Google Scholar: </b><a href=http://bit.ly/mariajantz>bit.ly/mariajantz</a></p>
+    <p><b>Lab Website: </b><a href=http://www.rnel.pitt.edu/people/maria-k-jantz>rnel.pitt.edu/people/maria-k-jantz</a></p>
+<p>also etsy maybe...and add professional headshot</p>
+</div>
 </body>
