--- a/links.html
+++ b/links.html
@@ -4,7 +4,11 @@
         <title>Maria Jantz: Links</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Yatra+One">
+              href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
+              <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Yatra+One">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
 <body>
@@ -23,4 +27,19 @@
             <a href="contact.html">Contact</a>
         </li>
 </ul>
+<div id="main">
+    <h2>View Full CV (PDF)</h2>
+    <p><i>Below are selected descriptions of experience and ?? beyond the research described
+        elsewhere on this site.
+    </i></p>
+    <h2>Teaching Experience</h2>
+    <p>CTSI certification, guest lecturing, co-facilitate fellowship writing 2900, 
+        authored curriculum for teaching python basics, k12 teaching.
+    </p>
+    <h2>Research Experience</h2>
+    <p>not sure what to add here that's not covered elsewhere</p>
+    <h2>Honors</h2>
+    <p>NDSEG Fellow, best oral presentation SPR, travel awards, NSF hon mention</p>
+</div>
+
 </body>
