--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
 </ul>
 <div id="main">
 <h2>Education</h2>
-<p>I am currently getting a PhD at the University of Pittsburgh, where I work with Professor Robert Gaunt. 
-    Here, I study epidural spinal cord stimulation for lower urinary tract control. 
+<p>I am currently a PhD candidate at the University of Pittsburgh, where I work with Professor Robert Gaunt. 
+    Here, I study epidural spinal cord stimulation for lower urinary tract control. I received an NDSEG Fellowship to
+    carry out this work. 
 </p>
 <p>Prior to joining this lab, I worked as a Research Technician at Northwestern University with Professors Lee Miller and Matthew Tresch.
     I studied functional electrical stimulation to restore locomotion after spinal cord injury, and (motion tracking, 
-    record brain signals from motor cortex, etc)
+    record brain signals from motor cortex, record muscle activity, etc)
 </p>
 <p>I graduated from Goshen College Summa Cum Laude in 2015 with a major in Physics and minors in Mathematics, Informatics, and Visual Art.</p>
 
 <h2>Research Interests</h2>
-<p>I am interested in neural stimulation and rehabilitation...</p>
+<p>Broadly, I am interested in neural stimulation and rehabilitation...</p>
 </div>
 </body>
 </html>
