--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,11 @@
         <title>Maria Jantz: Publications</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Yatra+One">
+              href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
+              <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Yatra+One">
+        <link rel="stylesheet"
+              href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
 <body>
@@ -23,6 +27,11 @@
             <a href="contact.html">Contact</a>
         </li>
 </ul>
-
+<div id="main">
 <p>maybe make this a "projects" page and link to publications for each project</p>
+
+<p>Classifying neural responses according to LUT functional outcomes</p>
+<p>Selective recruitment of LUT nerves with epidural SCS</p>
+<p>Brain-Controlled FES for locomotion</p>
+</div>
 </body>
