update contact, image, teaching philosophy

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 <h2>Research Interests</h2>
 <p>Broadly, I am interested in neural stimulation and rehabilitation...</p>
+<p>neuroscience lineage image</p>
 </div>
 </body>
 </html>
