--- a/links.html
+++ b/links.html
@@ -29,12 +29,21 @@
 </ul>
 <div id="main">
     <h2>View Full CV (PDF)</h2>
-    <p><i>Below are selected descriptions of experience and ?? beyond the research described
+    <p><i>Below are selected descriptions of experience and outreach beyond the research described
         elsewhere on this site.
     </i></p>
     <h2>Teaching Experience</h2>
-    <p>CTSI certification, guest lecturing, co-facilitate fellowship writing 2900, 
-        authored curriculum for teaching python basics, k12 teaching.
+    <p>I received a CTSI certification for STEM teaching in 2020, and I regularly guest lecture on neural 
+        engineering topics such as the Cable Equation. I co-facilitate the BIOENG 2900 Fellowship Writing class, 
+        for which I helped redesign the syllabus to include a focus on scientific communication. Previously, I 
+        authored a workshop <a href="https://www.amazon.com/Beginning-Python-essentials-anyone-fifth-ebook/dp/B076D5NSMV">curriculum
+             on teaching the basics of Python programming</a>. 
+        Link to website with stroop task etc k12 links. Also updated EarPython curriculum for 4-6th graders.
+    </p>
+    <p>My teaching philosophy statement can be viewed <a href="media/Teaching Philosophy Statement 2.pdf">here</a>.</p>
+    <h2>Outreach</h2>
+    <p>diversity and inclusion -- k12, undergrad, training + discussion, specifics, 
+        women in science, fifth grade teaching through northwestern
     </p>
     <h2>Research Experience</h2>
     <p>not sure what to add here that's not covered elsewhere</p>
