--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,14 @@
         </li>
 </ul>
 <div id="main">
+    <img id="headshot" src="media/nola.jpeg" alt="headshot">
+    <div id="contact">
     <h2>Where to find me</h2>
     <p><b>Email: </b>mariajantz@pitt.edu</p>
-    <p><b>Office Location: </b>Keystone Building, 3520 Fifth Ave, Rm 320 (currently working remotely)</p>
+    <p><b>Office Location: </b>Keystone Building, 3520 Fifth Ave, Rm 320</p>
+    <p style="margin-left: 8em; margin-top: -.5em;">*currently working remotely</p>
     <p><b>Google Scholar: </b><a href=http://bit.ly/mariajantz>bit.ly/mariajantz</a></p>
     <p><b>Lab Website: </b><a href=http://www.rnel.pitt.edu/people/maria-k-jantz>rnel.pitt.edu/people/maria-k-jantz</a></p>
-<p>also etsy maybe...and add professional headshot</p>
-</div>
+    <p><b>Ceramics: </b><a href=https://www.instagram.com/mkjceramics>instagram@mkjceramics</a></p>
+</div></div>
 </body>
