--- a/publications.html
+++ b/publications.html
@@ -28,10 +28,25 @@
         </li>
 </ul>
 <div id="main">
-<p>maybe make this a "projects" page and link to publications for each project</p>
+<p>Below are several projects I have worked on...for more info - Include link to google scholar (and ORCiD?)</p>
 
-<p>Classifying neural responses according to LUT functional outcomes</p>
-<p>Selective recruitment of LUT nerves with epidural SCS</p>
-<p>Brain-Controlled FES for locomotion</p>
+<div class="project">
+<h2>Predicting stimulation-evoked bladder function based on neural activity</h2>
+<p>My current PhD work focuses on restoring impaired bladder function. About 1 in 5 people will
+    experience impaired bladder function, and it's one of those things that you don't notice until
+    it's gone at which point you desperately want it back...
+    Bladder control is SUPER DUPER IMPORTANT... figure out
+    how to consistently get it. Gaunt lab, show a figure</p>
+</div>
+<div class="project">
+<h2>Selective recruitment of lower urinary tract nerves with epidural spinal cord stimulation</h2>
+<p>Bladder control again, paper shows it is possible to access nerves that innervate the bladder 
+    from epidural stimulation on sacral spinal cord. + selectivity
+</p>
+</div>
+<div class="project">
+<h2>Brain-controlled functional electrical stimulation for locomotion</h2>
+<p>Lee Miller + Matt Tresch, paper, figure</p>
+</div>
 </div>
 </body>
