--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <h1>Maria Jantz</h1>
-<ul>
+<ul id="head">
         <li id="active-tab">
             <a href="index.html">Background</a>
         </li>
@@ -34,8 +34,8 @@
     carry out this work. 
 </p>
 <p>Prior to joining this lab, I worked as a Research Technician at Northwestern University with Professors Lee Miller and Matthew Tresch.
-    I studied functional electrical stimulation to restore locomotion after spinal cord injury, and (motion tracking, 
-    record brain signals from motor cortex, record muscle activity, etc)
+    I studied functional electrical stimulation to restore locomotion after spinal cord injury, and as a part of that work I used motion tracking, 
+    recorded brain signals from the motor cortex of rats, and recorded and stimulated muscle activity. 
 </p>
 <p>I graduated from Goshen College Summa Cum Laude in 2015 with a major in Physics and minors in Mathematics, Informatics, and Visual Art.</p>
 
