--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Maria Jantz</h1>
-    <ul>
+    <ul id="head">
         <li>
             <a href="index.html">Background</a>
         </li>
@@ -28,27 +28,72 @@
         </li>
 </ul>
 <div id="main">
-    <h2>View Full CV (PDF)</h2>
+
     <p><i>Below are selected descriptions of experience and outreach beyond the research described
-        elsewhere on this site.
+        elsewhere on this site. </p>
+        <p><b>View my full CV here.*Add link</b>
     </i></p>
     <h2>Teaching Experience</h2>
-    <p>I received a CTSI certification for STEM teaching in 2020, and I regularly guest lecture on neural 
-        engineering topics such as the Cable Equation. I co-facilitate the BIOENG 2900 Fellowship Writing class, 
-        for which I helped redesign the syllabus to include a focus on scientific communication. Previously, I 
-        authored a workshop <a href="https://www.amazon.com/Beginning-Python-essentials-anyone-fifth-ebook/dp/B076D5NSMV">curriculum
-             on teaching the basics of Python programming</a>. 
-        Link to website with stroop task etc k12 links. Also updated EarPython curriculum for 4-6th graders.
+    <p>I am passionate about teaching, and have taught students ranging in age from 4th grade to graduate students. 
+        I received a CTSI certification for STEM teaching in 2020, and I regularly guest lecture on neural 
+        engineering topics such as the Cable Equation. At the University of Pittsburgh, I was a TA for graduate Neural Engineering as well as 
+        undergraduate Digital Signal Processing. I now co-facilitate the BIOENG 2900 Fellowship Writing class, 
+        for which I helped redesign the syllabus to focus on effective scientific communication.
+    <p>In addition to graduate-level teaching, I have <b>authored curricula</b> to teach programming concepts to students
+        at the K-12 level. The first of these is a workshop found <a href="https://www.amazon.com/Beginning-Python-essentials-anyone-fifth-ebook/dp/B076D5NSMV">here</a> 
+        on the basics of Python programming through game design. I have used this curriculum to teach a clinic for middle school girls, 
+        and another clinic for underrepresented minority students who had aged out of the foster care system. I have also 
+        adapted Georgia Tech's brilliant EarSketch curriculum as a 6-week course for 4th graders to learn Python through music. 
+        I taught this curriculum at Pittsburgh's Miller African-Centered Academy. For all of the materials from that course, you are 
+        welcome to contact me. 
     </p>
     <p>My teaching philosophy statement can be viewed <a href="media/Teaching Philosophy Statement 2.pdf">here</a>.</p>
     <h2>Outreach</h2>
-    <p>diversity and inclusion -- k12, undergrad, training + discussion, specifics, 
-        women in science, fifth grade teaching through northwestern
+    <p>In addition to teaching clinics and class units at the K-12 level focused on women and 
+        underrepresented minorities in STEM, I aim to improve access to STEM through diversity training and discussions, 
+        undergraduate recruitment, and policy changes at the lab and department level. 
+        Outside of the lab, I also work on efforts to improve voting access and participate in the Empty Bowls Project, 
+        a fundraising effort supporting local food banks.
     </p>
-    <h2>Research Experience</h2>
-    <p>not sure what to add here that's not covered elsewhere</p>
+    <p>
+        As part of my efforts for inclusion and diversity in lab, I have helped run a seminar and discussion series covering, 
+        among other things, the following topics: 
+        <ul>
+        <li>
+            Gender & Sexuality in STEM
+        </li>
+        <li>
+            Race
+        </li>
+        <li>
+            Class
+        </li>
+        <li>
+            Mental Health & Disability
+        </li>
+    </ul>
+    </p>
     <h2>Honors</h2>
-    <p>NDSEG Fellow, best oral presentation SPR, travel awards, NSF hon mention</p>
+    <ul>
+        <li>
+            NDSEG Fellow
+        </li>
+        <li>
+            Best Oral Presentation, Society for Pelvic Research
+        </li>
+        <li>
+            Travel awards, including Ripple Neuroscience and Neural Interfaces Conference Diversity Travel Award
+        </li>
+        <li>
+            NSF Graduate Research Fellowship Honorable Mention
+        </li>
+    </ul>
+    <h2>Extracurriculars</h2>
+    <p>Outside of the lab, I make time to do ceramics, glassblowing, gymnastics, and assorted baking projects. </p>
+    <p><i><b>For further details, view my full CV here.*Add link * Add photo of neuron mug</b></i></p>
+    <p>my brand: who am i/what do i do/what makes me special. add videos or animations? any media/interviews?</p>
 </div>
+<ul id = "head"><li></li></ul>
+
 
 </body>
