--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Maria Jantz</h1>
-    <ul>
+    <ul id="head">
         <li>
             <a href="index.html">Background</a>
         </li>
@@ -28,20 +28,26 @@
         </li>
 </ul>
 <div id="main">
-<p>Below are several projects I have worked on...for more info - Include link to google scholar (and ORCiD?)</p>
+<p>My current PhD work focuses on restoring lower urinary tract function. About 1 in 5 people will
+    experience impaired bladder function, but despite this widespread impact it is often overlooked. 
+    Poor bladder function can come from many neurological conditions, including spinal cord injury, 
+    Parkinson's Disease, and more. Below, I highlight several specific projects I have worked on in this lab and previously. 
+    For a complete set of publications, my Google Scholar page can be found <a href="http://bit.ly/mariajantz">here</a>
+    and my full CV is accessible <a href="links.html">here</a>. I am happy to send a copy of any papers on request.</p>
 
 <div class="project">
 <h2>Predicting stimulation-evoked bladder function based on neural activity</h2>
-<p>My current PhD work focuses on restoring impaired bladder function. About 1 in 5 people will
-    experience impaired bladder function, and it's one of those things that you don't notice until
-    it's gone at which point you desperately want it back...
-    Bladder control is SUPER DUPER IMPORTANT... figure out
-    how to consistently get it. Gaunt lab, show a figure</p>
+<p>Current systems to restore bladder control are inconsistent. Gaunt lab, show a figure</p>
 </div>
 <div class="project">
 <h2>Selective recruitment of lower urinary tract nerves with epidural spinal cord stimulation</h2>
-<p>Bladder control again, paper shows it is possible to access nerves that innervate the bladder 
-    from epidural stimulation on sacral spinal cord. + selectivity
+<p>Although nerve stimulation has been explored as an intervention to improve bladder control, placing 
+    nerve cuffs for stimulation clinically would be a difficult procedure to distribute widely. Epidural spinal 
+    cord stimulation, however, is a common procedure. Here, we show that it is possible to access the pelvic 
+    and pudendal nerves that innervate the lower urinary tract directly with epidural spinal cord stimulation. 
+    Additionally, using a high-density electrode array we are typically able to find electrodes that will
+    recruit these nerves selectively (to the exclusion of any other instrumented nerves). 
+    [fig + describe] [paper link]
 </p>
 </div>
 <div class="project">
