--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1>Maria Jantz</h1>
-    <ul>
+    <ul id="head">
         <li>
             <a href="index.html">Background</a>
         </li>
