--- a/background.html
+++ b/background.html
@@ -33,6 +33,7 @@
 						<li><a href="science.html">Scientific Projects</a></li>
 						<li><a href="teaching.html">Teaching & Outreach</a></li>
 						<li><a href="cv.html">Curriculum Vitae</a></li>
+						<li><a href="resources.html">Resources</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<!-- <li><a href="#" class="button primary fit">Get Started</a></li> -->
