--- a/science.html
+++ b/science.html
@@ -33,6 +33,7 @@
 		<li><a href="science.html">Scientific Projects</a></li>
 		<li><a href="teaching.html">Teaching & Outreach</a></li>
 		<li><a href="cv.html">Curriculum Vitae</a></li>
+		<li><a href="resources.html">Resources</a></li>
 	</ul>
 	<ul class="actions stacked">
 		<!-- <li><a href="#" class="button primary fit">Get Started</a></li> -->
@@ -70,8 +71,8 @@
 										in this lab and previously. For a complete set of publications, *scholar page and cv link*
 										I am happy to send a copy of any papers on request.
 									</p>
-									<p><strong>List of projects:</strong></p>
-									<p>Impact of behavior on stimulaton-evoked lower urinary tract control</p>
+									<p><strong>Jump to project:</strong></p>
+									<p>Link with #: Impact of behavior on stimulaton-evoked lower urinary tract control</p>
 									<p>Computational modelling of sacral spinal cord stimulation</p>
 									<p>Predicting stimulation-evoked bladder function based on neural activity</p>
 									<p>Selective recruitment of lower urinary tract nerves with epidural spinal cord stimulation</p>
@@ -89,7 +90,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Predicting stimulation-evoked bladder function based on neural activity</h3>
+												<h3>Inducing bladder control in awake animals</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -105,7 +106,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Computational models of sacral spinal cord stimulation</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
@@ -121,9 +122,29 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Recruiting lower urinary tract nerves and function</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Link to in depth page: Nerves+paper, Function+Chai's paper, Muscle/nerve/function, 
+												DRG stim+Chai paper
+											</p>
+											<ul class="actions">
+												<li><a href="generic.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Restoring locomotion after spinal cord injury</h3>
+											</header>
+											<p>vicon, emg, fes, stereotypic locomotor movement + 8 hindlimb muscles all 
+												presented at x and y, SCI, brain recordings. Paper link.
+											</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -131,6 +152,7 @@
 									</div>
 								</section>
 							</section>
+
 
 						<!-- Three -->
 							<section id="three">
