--- a/teaching.html
+++ b/teaching.html
@@ -33,6 +33,7 @@
 						<li><a href="science.html">Scientific Projects</a></li>
 						<li><a href="teaching.html">Teaching & Outreach</a></li>
 						<li><a href="cv.html">Curriculum Vitae</a></li>
+						<li><a href="resources.html">Resources</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<!-- <li><a href="#" class="button primary fit">Get Started</a></li> -->
@@ -77,6 +78,8 @@
         welcome to contact me. 
     </p>
     <p>My teaching philosophy statement can be viewed <a href="media/Teaching Philosophy Statement 2.pdf">here</a>.</p>
+	<p>Many of my teaching resources can be found <a href="resources.html">here</a>.</p>
+
     <h2>Outreach</h2>
 	<p>
 		As described above, I have written curricula for several programming clinics aiming to 
