Updates to science blurbs

--- a/science.html
+++ b/science.html
@@ -52,8 +52,7 @@
 								<h1>Scientific Projects</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Neurostimulation and rehab</p>
 							</div>
 						</div>
 					</section>
@@ -68,16 +67,11 @@
 										About 1 in 5 people will experience impaired bladder function, but despite this widespread impact it is often overlooked. 
 										Poor bladder function can come from many neurological conditions, including spinal cord injury, 
 										Parkinson's Disease, and more. Below, I highlight several specific projects I have worked on 
-										in this lab and previously. For a complete set of publications, *scholar page and cv link*
+										in this lab and previously. For a complete set of publications, please see my <a href="https://scholar.google.com/citations?user=0ZZe2g4AAAAJ&hl=en">Google Scholar page</a>
+										 or check out my <a href="cv.html">CV here</a>.
 										I am happy to send a copy of any papers on request.
 									</p>
-									<p><strong>Jump to project:</strong></p>
-									<p>Link with #: Impact of behavior on stimulaton-evoked lower urinary tract control</p>
-									<p>Computational modelling of sacral spinal cord stimulation</p>
-									<p>Predicting stimulation-evoked bladder function based on neural activity</p>
-									<p>Selective recruitment of lower urinary tract nerves with epidural spinal cord stimulation</p>
-									<p>DRG stuff</p>
-									<p>Brain-controlled functional electrical stimulation for locomotion</p>
+									
 								</div>
 							</section>
 
@@ -92,7 +86,9 @@
 											<header class="major">
 												<h3>Inducing bladder control in awake animals</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>yada yada anesthetized animals are a controlled environment but awake is a whole
+												new ball game
+											</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -108,7 +104,7 @@
 											<header class="major">
 												<h3>Computational models of sacral spinal cord stimulation</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>To understand the neurons activated by stimulation...</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -155,17 +151,6 @@
 
 
 						<!-- Three -->
-							<section id="three">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
 
 					</div>
 
