science info added

--- a/science.html
+++ b/science.html
@@ -79,18 +79,19 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Inducing bladder control in awake animals</h3>
+												<h3>Recruiting lower urinary tract nerves and function</h3>
 											</header>
-											<p>yada yada anesthetized animals are a controlled environment but awake is a whole
-												new ball game
+											<p>Current methods to address lower urinary tract dysfunction fall short of restoring bladder control, and we investigated spinal cord stimulation
+												as a way to recruit nerves of the lower urinary tract and to evoke function. Using stimulation on the epidural spinal cord or in the dorsal root ganglia,
+												we were able to produce activity in the nerves and muscles of the lower urinary tract as well as cause both continence and voiding function.
 											</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="scs_recruit.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -115,19 +116,17 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Recruiting lower urinary tract nerves and function</h3>
+												<h3>Inducing bladder control in awake animals</h3>
 											</header>
-											<p>Current methods to address lower urinary tract dysfunction fall short of restoring bladder control, and we investigated spinal cord stimulation
-												as a way to recruit nerves of the lower urinary tract and to evoke function. For more information about these projects, follow the link below. 
+											<p>Prior work focuses on anesthetized animals as a controlled environment for testing, but behavior and activity from other neural circuits
+												can affect the effectiveness of spinal cord stimulation. In order to test this, we are applying our stimulation in different behaving 
+												conditions to find the factors that affect outcomes for bladder control. 
 											</p>
-											<ul class="actions">
-												<li><a href="scs_recruit.html" class="button">Learn more</a></li>
-											</ul>
 										</div>
 									</div>
 								</section>
