comment out bits that aren't ready for the public

--- a/science.html
+++ b/science.html
@@ -79,7 +79,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="media/bladder_pressure.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -90,9 +90,9 @@
 												as a way to recruit nerves of the lower urinary tract and to evoke function. Using stimulation on the epidural spinal cord or in the dorsal root ganglia,
 												we were able to produce activity in the nerves and muscles of the lower urinary tract as well as cause both continence and voiding function.
 											</p>
-											<ul class="actions">
+											<!--<ul class="actions">
 												<li><a href="scs_recruit.html" class="button">Learn more</a></li>
-											</ul>
+											</ul>-->
 										</div>
 									</div>
 								</section>
@@ -114,7 +114,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+								<!--<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
@@ -129,7 +129,7 @@
 											</p>
 										</div>
 									</div>
-								</section>
+								</section>-->
 								<section>
 									<a href="generic.html" class="image">
 										<img src="media/rat_leg_motion.png" alt="" data-position="top center" />
