fix contact links

--- a/cv.html
+++ b/cv.html
@@ -87,8 +87,8 @@
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Online</h3>
 									<a href="#">Email: mariajantz@pitt.edu</a><br/>
-									<a href="bit.ly/mariajantz">Google Scholar</a><br/>
-									<a href="rnel.pitt.edu/people/maria-k-jantz">Lab Website</a>
+									<a href="https://bit.ly/mariajantz">Google Scholar</a><br/>
+									<a href="https://rnel.pitt.edu/people/maria-k-jantz">Lab Website</a>
 								</div>
 							</section>
 						</section><section class="split">
