--- a/resources.html
+++ b/resources.html
@@ -52,7 +52,7 @@
 										<h1>Teaching Resources</h1>
 									</header>
 									<h3>Programming Examples</h3>
-									<p>Examples of projects are sometimes useful to get a sense for the kinds of things that are possible with programming. 
+									<p>Examples of projects are useful to get a sense for the kinds of things that are possible with programming. 
 										Some of my own projects from college include <a href="https://youtu.be/HDZj2nxM0pc">this robotic arm</a> and 
 										<a href="https://youtu.be/kcBFFNmLB8o">this iOS sudoku generator</a>. I also recommend checking out <a href="https://www.instructables.com/circuits/arduino/projects/">
 										Arduino projects on Instructables</a>
@@ -61,14 +61,15 @@
 									<h3>Coding Resources</h3>
 									<a href="https://blockly.games/maze">Blockly Maze game</a></br>
 									Algorithmic thinking activity with Pictionary or human robots</br>
-									<a href="https://earsketch.gatech.edu/earsketch2/#">EarSketch Music with Python</a></br>
+									<a href="https://earsketch.gatech.edu/earsketch2/#">EarSketch Music with Python</a> (contact me for additional teaching resources)</br>
 									<a href="https://groups.csail.mit.edu/mac/projects/scheme/">Programming in Scheme</a> 
 										(an entirely recursive language)</br>
-									<a href="https://inventwithpython.com/pygame/">Python Games with Pygame</a> </br>
+									<a href="https://inventwithpython.com/pygame/">Python Games with Pygame</a> (contact me for additional teaching resources)</br>
 									<a href="https://projecteuler.net/archives">Math puzzles on Project Euler</a></br></br>
 									<h3>Science Projects and Neuro Activities</h3>
 									<a href="https://mfliu.github.io/neuroActivities/index.html">Neuro Activities from Monica Liu</a> </br>
 									<a href="https://neuromembrane.ualberta.ca/">Neuromembrane Simulator</a></br>
+									<a href="https://microbit.org/">MicroBit Prototyping</a></br>
 									<a href="https://backyardbrains.com/experiments/">Experiments with Backyard Brains devices</a></br>
 								</br>
 									<h3>Class Notes</h3>
