--- a/teaching.html
+++ b/teaching.html
@@ -106,7 +106,7 @@
             Gender & Sexuality in STEM
         </li>
         <li>
-            Class
+            Socioeconomic class
         </li>
         <li>
             Mental Health & Disability
