--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,7 @@
         at the K-12 level. The first of these is a workshop found <a href="https://www.amazon.com/Beginning-Python-essentials-anyone-fifth-ebook/dp/B076D5NSMV">here</a> 
         on the basics of Python programming through game design. I have used this curriculum to teach a clinic for middle school girls, 
         and another clinic for underrepresented minority students who had aged out of the foster care system. I have also 
-        adapted Georgia Tech's brilliant EarSketch curriculum as a 6-week course for 4th graders to learn Python through music. 
+        adapted Georgia Tech's brilliant EarSketch curriculum as a course for either 4th graders or 9th-12th graders to learn Python through music. 
         I taught this curriculum at Pittsburgh's Miller African-Centered Academy. For all of the materials from that course, you are 
         welcome to contact me. 
     </p>
@@ -84,7 +84,9 @@
 	<p>
 		As described above, I have written curricula for several programming clinics aiming to 
 		provide educational opportunities at the K-12 level focused on women and 
-        underrepresented minorities in STEM. In addition to these efforts, I taught an 8 week seminar course for 
+        underrepresented minorities in STEM. In partnership with the University of Pittsburgh Community Engagement Center and 
+		the local BMES chapter, I submitted on the outcomes of music programming courses to the Collaborative Network for Engineering & Computer Diversity (CoNECD) 2022 Conference.
+		In addition to these efforts, I taught an 8 week seminar course for 
 		9th graders on STEM careers and engineering design, covering topics ranging from robotics to large-scale scientific 
 		efforts such as pandemic response.
 	</p>
