add additional resource

--- a/cv.html
+++ b/cv.html
@@ -61,7 +61,7 @@
 													Society for Pelvic Research Best Presentation and was selected to give a talk as part of a showcase of early stage researchers at 
 													the International Society for Autonomic Neuroscience.</p>
 												<ul class="actions">
-													<li><a href="#" class="button icon solid fa-download">Download CV</a></li>
+													<li><a href="media/Jantz_CV.pdf" class="button icon solid fa-download">Download CV</a></li>
 												</ul>
 											</div>
 											<div class="col-6 col-12-small">
