--- a/resources.html
+++ b/resources.html
@@ -60,6 +60,7 @@
 									</p>
 									<h3>Coding Resources</h3>
 									<a href="https://blockly.games/maze">Blockly Maze game</a></br>
+									<a href="https://musiclab.chromeexperiments.com/Experiments">Chrome Music Lab</a></br>
 									Algorithmic thinking activity with Pictionary or human robots</br>
 									<a href="https://earsketch.gatech.edu/earsketch2/#">EarSketch Music with Python</a> (contact me for additional teaching resources)</br>
 									<a href="https://groups.csail.mit.edu/mac/projects/scheme/">Programming in Scheme</a> 
@@ -71,6 +72,16 @@
 									<a href="https://neuromembrane.ualberta.ca/">Neuromembrane Simulator</a></br>
 									<a href="https://microbit.org/">MicroBit Prototyping</a></br>
 									<a href="https://backyardbrains.com/experiments/">Experiments with Backyard Brains devices</a></br>
+									<a href="https://www.oacommunity.org/resources">Open Academics Writing Resources</a></br>
+									<a href="https://github.com/matplotlib/cheatsheets/blob/master/cheatsheets.pdf">MatPlotLib Cheat Sheets</a></br>
+									Get a Grip: Build prostheses from 3" poster tubes and assorted supplies (duct tape, string)</br>
+									Conductive ink pens for designing circuits</br>
+									Build Rube Goldberg machines</br>
+									Build a motor with copper wire</br>
+									Thermoelectric motor (Seebeck Effect)</br>
+									pH indicators, including with peaflower lemonade</br>
+									<a href="https://www.seattleu.edu/scieng/physics/physics-demos/">Resources on introductory Physics demonstrations</a></br>
+
 								</br>
 									<h3>Class Notes</h3>
 									<a href="media/Lectures_NeuralEngineering_student.pdf">Hodgkin & Huxley, Stimulation, and the Cable Equation</a>
