--- a/cv.html
+++ b/cv.html
@@ -75,6 +75,7 @@
 
 										</div>
 										<h2>In the media</h2>
+										<a href="https://www.gradstudies.pitt.edu/2022-pitt-3mt-contestants">Winner of 3 Minute Thesis competition</a>
 										<a href="https://www.pittwire.pitt.edu/news/hill-district-cec-introduces-digital-inclusion-efforts-pittsburgh">Python and Music Outreach</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2019/Jantz-NDSEG/">NDSEG award recognition</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2018/BioE-2018-NSF-GRFP/">NSF GRFP honorable mention</a></br>
