--- a/science.html
+++ b/science.html
@@ -79,6 +79,24 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
+										<img src="media/model-gif.gif" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Computational models of sacral spinal cord stimulation</h3>
+											</header>
+											<p>I built a fully-functional model of the sacral spinal cord to simulate the neural tissue activated by 
+												epidural spinal cord stimulation. We simulated the neural recruitment evoked by stimulation as well as the bladder reflexes evoked by that neural
+												activity. In the model, we can simulate a large parameter space that is impossible to fully explore in vivo, as well as determine the 
+												characteristics of typical neural recruitment during simulation. 
+
+											</p>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
 										<img src="media/bladder_pressure.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
@@ -96,24 +114,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
-									<a href="generic.html" class="image">
-										<img src="media/fem_cord.png" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Computational models of sacral spinal cord stimulation</h3>
-											</header>
-											<p>To understand the neurons activated by stimulation, I am building a computational model of the spinal cord. In this model, 
-												it will be possible to simulate the region of neural tissue that is activated by different stimuli. 
-												Stimulation parameters that can be applied include a wide range of amplitudes, frequencies, sets of electrode multipoles, 
-												and pulsewidths, making a large parameter space that is impossible to explore entirely in vivo. Using our computational model, 
-												we can shed light on the neural recruitment behind the lower urinary tract activity we have evoked in experiments.
-											</p>
-										</div>
-									</div>
-								</section>
+
 								<!--<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
