updated CV and added paper links

--- a/cv.html
+++ b/cv.html
@@ -69,13 +69,13 @@
 												<p>I study neuroscience and rehabilitation of the lower urinary tract. In my thesis, I aim to use epidural spinal cord stimulation to recruit bladder nerves and 
 													control both continence and voiding, build a computational model of the sacral spinal cord to understand the neural recruitment
 													achieved with this stimulation, and produce effective bladder control in awake behaving animals. More information about these
-													and other projects I have been involved in is located <a href="science.html">here</a>. </p>
+													and other projects I have been involved in is located <a href="science.html">here</a>, or a three minute overview is <a href="https://youtu.be/HN16Mt0Qkns">here</a>. </p>
 											</div>
 											<!-- Break -->
 
 										</div>
 										<h2>In the media</h2>
-										<a href="https://www.gradstudies.pitt.edu/2022-pitt-3mt-contestants">Winner of 3 Minute Thesis competition</a>
+										<a href="https://www.gradstudies.pitt.edu/2022-pitt-3mt-contestants">Winner of 3 Minute Thesis competition</a></br>
 										<a href="https://www.pittwire.pitt.edu/news/hill-district-cec-introduces-digital-inclusion-efforts-pittsburgh">Python and Music Outreach</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2019/Jantz-NDSEG/">NDSEG award recognition</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2018/BioE-2018-NSF-GRFP/">NSF GRFP honorable mention</a></br>
