--- a/science.html
+++ b/science.html
@@ -92,6 +92,10 @@
 												characteristics of typical neural recruitment during simulation. 
 
 											</p>
+											<ul class="actions">
+												<li><a href="media/Jantz_EMBCfinal.pdf" class="button">Conference Paper</a></li>
+		
+											</ul>
 										</div>
 									</div>
 								</section>
@@ -108,6 +112,10 @@
 												as a way to recruit nerves of the lower urinary tract and to evoke function. Using stimulation on the epidural spinal cord or in the dorsal root ganglia,
 												we were able to produce activity in the nerves and muscles of the lower urinary tract as well as cause both continence and voiding function.
 											</p>
+											<ul class="actions">
+												<li><a href="https://www.biorxiv.org/content/10.1101/2021.04.30.442206v1" class="button">BioRxiv Paper</a></li>
+		
+											</ul>
 											<!--<ul class="actions">
 												<li><a href="scs_recruit.html" class="button">Learn more</a></li>
 											</ul>-->
